# TCPIP_chat

./: .gitignore
Logger/: CMakeLists.txt  Logger.sln
Logger/Logger/: BaseLogger.cpp  BaseLogger.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.cpp  Logger.vcxproj  LoggerManager.cpp  LoggerManager.h  dllmain.cpp  stdafx.h
Logger/Logger/loggerAPI/: ILogger.h  LoggerManager.h
ProtocolAPI/: CMakeLists.txt  ProtocolAPI.sln
ProtocolAPI/ProtocolAPI/: BaseMessage.cpp  BaseMessage.h  BroadcastMessage.cpp  BroadcastMessage.h  Defines.h  DirectMessage.cpp  DirectMessage.h  Enums.h  Message.h  NameRequestMessage.cpp  NameRequestMessage.h  Protocol.cpp  Protocol.h  ProtocolAPI.vcxproj  Response.cpp  Response.h  stdafx.cpp
TCPIP_Client/: CMakeLists.txt  TCPIP_Client.sln  TCP_Client.cbp
TCPIP_Client/Console/: CMakeLists.txt  Console.cpp
TCPIP_Client/QT_UI/: CMakeLists.txt  QT_UI.pro  azsfsa.cpp  azsfsa.h  client.cpp  client.h  clientsetting.cpp  clientsetting.h  clientsettings.cpp  clientsettings.h  main.cpp  mainloopworker.cpp  mainloopworker.h  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp_parameters  settings.cpp  settingsdialog.cpp  settingsdialog.h  statuscheckerworker.cpp  statuscheckerworker.h  threadcontroller.cpp  threadcontroller.h  worker.h
TCPIP_Client/QT_UI/qt/: client.cpp  client.h  clientsettings.cpp  mainloopworker.cpp  mainloopworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.ui  statuscheckerworker.cpp  statuscheckerworker.h  threadcontroller.cpp  threadcontroller.h
TCPIP_Client/TCPIP_CLIENT_DLL/: CMakeLists.txt  CallbacksHolder.cpp  CallbacksHolder.h  ChatClientAPI.cpp  Defines.h  Exceptions.h  TCPIP_CLIENT_DLL.cpp  TCPIP_CLIENT_DLL.h  TCPIP_CLIENT_DLL.vcxproj  UIInterface.cpp  UIInterface.h
TCPIP_Client/TCPIP_CLIENT_DLL/public/: ChatClientAPI.h
TCPIP_Client/TCPIP_Client/: CMakeLists.txt  ProtocolAPI.h  TCPIP_Client.cpp  TCPIP_Client.vcxproj
TCPIP_Client/WPF_UI/: App.xaml.cs  AutoScroll.cs  CMakeLists.txt  FlashingHelper.cs  MainWindow.xaml  MainWindow.xaml.cs  UserInfoWindow.xaml  UserInfoWindow.xaml.cs  WPF_UI.csproj  WatermarkedTextBox.cs
TCPIP_Client/WPF_UI/Properties/: Resources.Designer.cs  Resources.resx
TCPIP_Server/: CMakeLists.txt  TCPIP_Server.sln
TCPIP_Server/TCPIP_Server/: CMakeLists.txt  ClientSet.cpp  ClientSet.h  Defines.h  Exceptions.h  ProtocolAPI.h  Server.cpp  Server.h  ServerClient.cpp  ServerClient.h  TCPIP_Server.cpp  TCPIP_Server.vcxproj  TCPServer.cpp  TCPServer.h
TestClient/: TestClient.sln
TestClient/TestClient/: TestClient.cpp  TestClient.vcxproj
